<resources>
    <string name="app_name">First</string>
    <string name="hello_world">Hello World!!!</string>
    <string name="sample_text">Hello</string>
    <string name="first_btn">Первая кнопка</string>
    <string name="second_btn">Вторая кнопка</string>

    <string name="sample_text_DZ">Hello World</string>
    <string name="first_btn_DZ">Кнопка номер 1</string>
    <string name="second_btn_DZ">Кнопка номер 2</string>


    <string name="sample_text_DZ2">Хулиган</string>
    <string name="sample_text_DZ3">Нажми Кнопку номер 3</string>

    <string name="third_btn_DZ">Кнопка номер 3</string>
    <string name="fourth_btn_DZ">Кнопка номер 4</string>


    <string name="logo_text">Калькулятор</string>
    <string name="number_1">Число 1</string>
    <string name="number_2">Число 2</string>
    <string name="sum_btn">+</string>
    <string name="minus_btn">-</string>
    <string name="multiply_btn">*</string>
    <string name="share_btn">/</string>

</resources>