<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textSampleDz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sample_text_DZ"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/firstButtonDz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="sayhelloDz"
        android:text="@string/first_btn_DZ"
        app:layout_constraintEnd_toStartOf="@+id/secondButtonDz"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSampleDz" />

    <Button
        android:id="@+id/secondButtonDz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="sayhelloDz2"
        android:text="@string/second_btn_DZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstButtonDz"
        app:layout_constraintTop_toBottomOf="@+id/textSampleDz" />







    <TextView
        android:id="@+id/textSampleDz2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_DZ2"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstButtonDz" />

    <TextView
        android:id="@+id/textSampleDz3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text_DZ3"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSampleDz2" />

    <Button
        android:id="@+id/thirdButtonDz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="sayhelloDz2"
        android:text="@string/third_btn_DZ"
        app:layout_constraintEnd_toStartOf="@+id/secondButtonDz"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSampleDz3" />

    <Button
        android:id="@+id/fourthButtonDz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="sayhelloDz2"
        android:text="@string/fourth_btn_DZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstButtonDz"
        app:layout_constraintTop_toBottomOf="@+id/textSampleDz3" />


    />



</androidx.constraintlayout.widget.ConstraintLayout>