<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/logo_text"
        android:textColor="@color/design_default_color_on_secondary"


        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcSum" />

    <EditText
        android:id="@+id/editNumber1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/number_1"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/editNumber2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNumber2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/number_2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editNumber1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calcSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sum_btn"
        app:layout_constraintEnd_toStartOf="@+id/calcMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumber1" />

    <Button
        android:id="@+id/calcMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="-"
        app:layout_constraintEnd_toStartOf="@+id/calcMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calcSum"
        app:layout_constraintTop_toBottomOf="@+id/editNumber1" />

    <Button
        android:id="@+id/calcMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="*"
        app:layout_constraintEnd_toStartOf="@+id/calcShare"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calcMinus"
        app:layout_constraintTop_toBottomOf="@+id/editNumber2" />

    <Button
        android:id="@+id/calcShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="/"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calcMultiply"
        app:layout_constraintTop_toBottomOf="@+id/editNumber2" />
</androidx.constraintlayout.widget.ConstraintLayout>